<resources>
    <string name="app_name">MTM数据采集</string>
    <string name="login_title">登 录</string>
    <string name="login_account_hit">请输入账号</string>
    <string name="login_password_hit">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="login_remmsg">记住密码</string>
    <string name="pm_xltitle">心率</string>
    <string name="pm_xlmunit">bpm</string>
    <string name="pm_promp">提示</string>
    <!--- <string name="server_url">http://123.206.85.239</string>-->
    <string name="server_url">http://6d6a5200.ngrok.io</string>
    <string name="exitmsg">再按一次退出程序</string>
</resources>
