<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    tools:layout_editor_absoluteY="10dp"
    tools:layout_editor_absoluteX="10dp"
    android:background="@drawable/data_list_bg">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp">

        <ImageView
            android:id="@+id/pic"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/xltitle"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/blood" />
        <TextView
            android:id="@+id/times"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="15:28:32 2017-11-10"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/data"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        app:layout_constraintLeft_toRightOf="@+id/linearLayout"
        android:background="@drawable/data_area"
        android:layout_marginLeft="8dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/xltitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#bd83cd"
                android:text="@string/pm_xltitle" />
            <TextView
                android:id="@+id/bpm"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="89"
                android:textAlignment="center"
                android:textColor="@color/value"
                android:textSize="26dp" />
            <TextView
                android:id="@+id/xlunit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/pm_xlmunit" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/xlpromp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#bd83cd"
                android:text="@string/pm_promp" />

            <TextView
                android:id="@+id/results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="室早RonT室早三联律"
                android:textColor="@color/msgvalue"
                android:textSize="18dp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/datatype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="TextView"
    />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/data"
        android:layout_marginLeft="8dp">

        <ImageView
            android:id="@+id/upload"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:src="@drawable/upload" />

        <TextView
            android:id="@+id/reupload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="重新\n上传"
            android:textColor="#f46c9a" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:id="@+id/lookecgwrap"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/linearLayout3"
        android:layout_marginLeft="0dp"
        android:gravity="center">

        <TextView
            android:id="@+id/lookecg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="心电图"
            android:textColor="#48cda6" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>